--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^5.6.0"
+    "mongoose": "^5.6.0",
+    "nodemailer": "^6.9.4",
+    "preview-email": "^3.0.19"
   }
 }
