--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
+PORT=5000
 BCRYPT_SALT="10"
-DB_URL="mongodb://localhost:27017/test2"
-JWT_SECRET="mfefkuhio3k2rjkofn2mbikbkwjhnkj"
+MONGODB_URI="mongodb://localhost:27017"
+DB_NAME="TEST3"
+JWT_SECRET="Natureisourmother"
 CLIENT_URL="localhost://8090"
